# driveckup

./: .gitignore  README.md  driveckup.yaml  drkp.py  drkp_daemon.py  mk_dir.py  mk_file.py  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: package.yaml
driveckup/: communication.py  config.py  daemon.py  db_repo.py  driveckup.py  file_repo.py  utils.py
model/sqlite/: File.sql
src/: drkp.py  drkp_daemon.py  mk_dir.py  mk_file.py
src/driveckup/: config.py  daemon.py  db_repo.py  logic.py  utils.py
src/model/sqlite/: RemoteFile.sql
src/test/: test_configurations.py  test_multiupload.py  test_socket.c
test/: test_multiprocessing.py  test_multiupload.py  test_treeflatting.py
tests/: test-package.sh  test_import.py
