[metadata]
name = driveckup
version = 0.0.1
author = Angel Leon
author_email = angel@angelleon.dev
description = Tool for create/restore backups in/from Google Drive
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angelleon/driveckup
project_urls =
    Bug Tracker = https://github.com/angelleon/driveckup/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
  PyYAML ==5.4.1

[options.packages.find]
where = src